<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_elections">

    <navigation
        android:id="@+id/nav_elections"
        app:startDestination="@id/electionsFragment">

        <fragment
            android:id="@+id/electionsFragment"
            android:name="com.kotlin.cee_app.ui.elections.ElectionsFragment"
            android:label="@string/title_elections"
            tools:layout="@layout/fragment_elections">
            <action
                android:id="@+id/action_elections_to_createElection"
                app:destination="@id/createElectionFragment" />
            <action
                android:id="@+id/action_elections_to_results"
                app:destination="@id/resultsFragment" />
        </fragment>

        <fragment
            android:id="@+id/createElectionFragment"
            android:name="com.kotlin.cee_app.ui.elections.CreateElectionFragment"
            android:label="@string/create_new_election"
            tools:layout="@layout/fragment_create_election">
            <argument
                android:name="votacionId"
                app:argType="string"
                app:nullable="true"
                android:defaultValue="@null" />
        </fragment>

</navigation>

    <navigation
        android:id="@+id/nav_results"
        app:startDestination="@id/resultsFragment">

        <fragment
            android:id="@+id/resultsFragment"
            android:name="com.kotlin.cee_app.ui.results.ResultsFragment"
            android:label="@string/title_results"
            tools:layout="@layout/fragment_results_enhanced">
            <argument
                android:name="votacionId"
                app:argType="string"
                app:nullable="true"
                android:defaultValue="@null" />
        </fragment>
    </navigation>

    <navigation
        android:id="@+id/nav_users"
        app:startDestination="@id/usersFragment">

        <fragment
            android:id="@+id/usersFragment"
            android:name="com.kotlin.cee_app.ui.users.UsersFragment"
            android:label="@string/title_users"
            tools:layout="@layout/fragment_users">
            <action
                android:id="@+id/action_users_to_createUser"
                app:destination="@id/createUserFragment" />
        </fragment>

        <fragment
            android:id="@+id/createUserFragment"
            android:name="com.kotlin.cee_app.ui.users.CreateUserFragment"
            android:label="@string/users_action_create"
            tools:layout="@layout/fragment_create_user">
            <argument
                android:name="userId"
                app:argType="string"
                app:nullable="true"
                android:defaultValue="@null" />
        </fragment>
    </navigation>

</navigation>
